# plant_project

./: CNN_from_scratch.py  README.md  build_manifest.py  compare_models.py  plot_roc_curve.py  plot_training_curves.py  streamlit_app.py
checkpoints/: scratch_cnn_history.json
data/: plant_monitor.db  treatment_db.json
disscution_project/: CNN_from_scratch.py  streamlit_app.py
disscution_project/checkpoints/: scratch_cnn_history.json
plant_disease_detector/: README.md  __init__.py  coverage_report.txt  dataset.py  evaluate.py  export.py  gradcam.py  label_map.json  model.py  model_summary.txt  paths.py  predict.py  prepare_data.py  pyproject.toml  requirements.txt  train.py
plant_disease_detector/checkpoints/logs/: train_log.json
plant_disease_detector/data/: dataset_health.json
plant_disease_detector/results/: metrics.json
plant_disease_detector/scripts/: sanity_check_model.py
plant_disease_detector/tests/: conftest.py  test_api.py  test_dataset.py  test_evaluate.py  test_export.py  test_gradcam.py  test_model.py  test_paths.py  test_predict.py  test_prepare_data.py  test_train.py
